finished booking form, only missing background and wonky stuff at the bottom needs fixed

--- a/app/assets/stylesheets/pages/_new_car.scss
+++ b/app/assets/stylesheets/pages/_new_car.scss
@@ -16,7 +16,16 @@
 .title-h2 {
   color: white;
   font-size: 50px;
+}
 
+.title-h3 {
+  color: white;
+  font-size: 26px;
+
+}
+.booking_title {
+  color: white;
+  font-size: 50px;
 }
 
 
